; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/gigaset/extr_interface.c_gigaset_if_freedriver.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/gigaset/extr_interface.c_gigaset_if_freedriver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gigaset_driver = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gigaset_if_freedriver(%struct.gigaset_driver* %0) #0 {
  %2 = alloca %struct.gigaset_driver*, align 8
  store %struct.gigaset_driver* %0, %struct.gigaset_driver** %2, align 8
  %3 = load %struct.gigaset_driver*, %struct.gigaset_driver** %2, align 8
  %4 = getelementptr inbounds %struct.gigaset_driver, %struct.gigaset_driver* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %19

8:                                                ; preds = %1
  %9 = load %struct.gigaset_driver*, %struct.gigaset_driver** %2, align 8
  %10 = getelementptr inbounds %struct.gigaset_driver, %struct.gigaset_driver* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.gigaset_driver*, %struct.gigaset_driver** %2, align 8
  %12 = getelementptr inbounds %struct.gigaset_driver, %struct.gigaset_driver* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @tty_unregister_driver(i32 %13)
  %15 = load %struct.gigaset_driver*, %struct.gigaset_driver** %2, align 8
  %16 = getelementptr inbounds %struct.gigaset_driver, %struct.gigaset_driver* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @put_tty_driver(i32 %17)
  br label %19

19:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @tty_unregister_driver(i32) #1

declare dso_local i32 @put_tty_driver(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
